# review-calibration

./: .envrc  .gitignore  GROUND_TRUTH.md  HILL_CLIMB.md  README.md  SCORING.md  justfile  pyproject.toml  review-packet.tar
.github/workflows/: review-general.yml  review-slop.yml
lattice_spike_slice/notebooks/: spike_demo.ipynb
lattice_spike_slice/objects/: categories.py  parents.py
lattice_spike_slice/tests/: test_contract_completeness.sage
lattice_spike_slice/vault/decisions/: object-vs-subobject-identity-subobjects-are-slice-category-objects-x-f-equality-is-r-g-f.md  roots-are-defined-by-integral-reflection-not-by-norm.md
lattice_spike_slice/vault/traps/: demo-notebook-wrote-self-affirming-assertions-and-trivial-tests.md  primitive-embedding-is-computed-from-cokernel-not-caller-flag.md
policies/: STYLE.md
research_review_calibration.egg-info/: PKG-INFO  SOURCES.txt
scripts/: normalize_metadata.py
src/: score.py
src/research_review_calibration.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_score.py
